# membench

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  build.ninja  bwap  bwap.c  cmake_install.cmake  lstopo-local  membench  membench.c  membench_base  membench_base.c  membench_data_init  membench_data_init.c  membench_lehmer.c  membench_pregen_init  membench_pregen_init.c  membench_randr.c  membench_wyhash.c  notes.md  simplebench  simplebench.c  test  vals_0  vals_2
logs/: 100M_0.csv  100M_1.csv  100M_2.csv  100M_2_perf.csv.csv  100M_2_perf_2events.csv  100M_2_perf_I.csv  100M_2_perf_cache-misses.csv  100M_2_perf_cache-misses.csv.csv  100M_2_waitloop_cache-misses.csv  100M_perf.csv  100M_perf_I.csv.csv  10M_10M_O0.csv  10M_10M_O3.csv  1GB_100M_O0.csv  1GB_100M_O3.csv  1GB_no-spinloop-L1-dcache-load-misses.csv  1GB_no-spinloop-out_LLC_load-misses.csv  1GB_no-spinloop-out_cache-misses.csv  1GB_no-spinloop_LLC-load-misses.csv  1GB_no-spinloop_cache-misses.csv  1GB_spinloop_LLC-load-misses.csv  1GB_spinloop_LLC-load-misses_old.csv  1GB_spinloop_cache-misses.csv  1GB_spinloop_cache-misses_old.csv  20Kit_100M_O3.csv  500Kit_100M_O3.csv  750kslit_10M_O0.csv  750kslit_10M_O3.csv  baseline_loadstore_100M_O0.csv  baseline_loadstore_100M_O3.csv  baseline_loadstore_rnd_100M_O0.csv  baseline_loadstore_rnd_100M_O3.csv  baseline_store_100M_O0.csv  baseline_store_100M_O3.csv  baseline_store_rnd_100M_O0.csv  baseline_store_rnd_100M_O3.csv  baseline_store_sl_100M_O0.csv  baseline_store_sl_100M_O3.csv  bench.csv  bench_1GB_100M_O0.csv  (+84 more)
lstopo/: lstopo-g5k-trollnode
(+66 files in other folders)
